--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -142,9 +142,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="next">
+			<div class="next-second">
 				<span class="next-button" id="second-before" onclick="gotoFirst()">前へ</span>
-				<span class="next-button disabled" id="second-next" onclick="secondHidden()">次へ</span>
 
 			</div>
 		</div>
@@ -189,13 +188,13 @@
 
 			<div class="third-five-part">
 				<div class="third-one">
-					<div class="third-cycle" id="plane" data-index = "1" onclick="thirdCheck(this)">
+					<div class="third-cycle" id="plane" data-index="1" onclick="thirdCheck(this)">
 						<div class="third-img">
 							<img src="./assets/img/plane.png" alt="">
 						</div>
 						<span class="third-span" id="plane-content">直ぐにでも</span>
 					</div>
-					<div class="third-cycle" id="train" data-index = "2" onclick="thirdCheck(this)">
+					<div class="third-cycle" id="train" data-index="2" onclick="thirdCheck(this)">
 						<div class="third-img">
 							<img src="./assets/img/train.png" alt="">
 						</div>
@@ -206,20 +205,20 @@
 					</div>
 				</div>
 				<div class="third-two">
-					<div class="third-cycle" id="bus" data-index = "3" onclick="thirdCheck(this)">
+					<div class="third-cycle" id="bus" data-index="3" onclick="thirdCheck(this)">
 						<div class="third-img">
 							<img src="./assets/img/bus.png" alt="">
 						</div>
 						<span class="third-span" id="bus-content">3ヶ⽉以内</span>
 					</div>
-					<div class="third-cycle" id="bike" data-index = "4" onclick="thirdCheck(this)">
+					<div class="third-cycle" id="bike" data-index="4" onclick="thirdCheck(this)">
 						<div class="third-img">
 							<img src="./assets/img/bike.png" alt="">
 						</div>
 						<span class="third-span" id="bike-content">半年以内</span>
 					</div>
 				</div>
-				<div class="third-three" id="rickshaw" data-index = "5" onclick="thirdCheck(this)">
+				<div class="third-three" id="rickshaw" data-index="5" onclick="thirdCheck(this)">
 
 					<div class="third-img">
 						<img src="./assets/img/old.png" alt="">
@@ -227,10 +226,9 @@
 					<span class="third-span" id="rickshaw-content">時期未定</span>
 				</div>
 			</div>
-			<div class="next">
+			<div class="next-third">
 				<span class="next-button" id="third-before" onclick="gotoSecond()">前へ</span>
 
-				<span class="next-button disabled" id="third-next" onclick="thirdHidden()">次へ</span>
 
 			</div>
 		</div>
@@ -275,14 +273,14 @@
 				<div class="next-img-four">
 					<img src="./assets/img/next.png" alt="">
 				</div>
-				<div class="option-one" id="f1" data-index = "1" onclick="fourClick(this)">収⼊を上げたいから</div>
-				<div class="option-one" id="f2" data-index = "2" onclick="fourClick(this)">⾃分のペースで仕事をしたいから</div>
-				<div class="option-one" id="f3" data-index = "3" onclick="fourClick(this)">もっとやりがいを感じる仕事をしたいから</div>
-				<div class="option-one" id="f4" data-index = "4" onclick="fourClick(this)">正社員になりたいから</div>
-				<div class="option-one" id="f5" data-index = "5" onclick="fourClick(this)">副業ができる会社で働きたいから</div>
-				<div class="option-one" id="f6" data-index = "6" onclick="fourClick(this)">⾃宅から近い会社で働きたいから</div>
-				<div class="option-one" id="f7" data-index = "7" onclick="fourClick(this)">今の仕事を中⻑期的に続けるイメージができないから</div>
-				<div class="option-one" id="f8" data-index = "8" onclick="fourClick(this)">間関係に疲れてしまったから</div>
+				<div class="option-one" id="f1" data-index="1" onclick="fourClick(this)">収⼊を上げたいから</div>
+				<div class="option-one" id="f2" data-index="2" onclick="fourClick(this)">⾃分のペースで仕事をしたいから</div>
+				<div class="option-one" id="f3" data-index="3" onclick="fourClick(this)">もっとやりがいを感じる仕事をしたいから</div>
+				<div class="option-one" id="f4" data-index="4" onclick="fourClick(this)">正社員になりたいから</div>
+				<div class="option-one" id="f5" data-index="5" onclick="fourClick(this)">副業ができる会社で働きたいから</div>
+				<div class="option-one" id="f6" data-index="6" onclick="fourClick(this)">⾃宅から近い会社で働きたいから</div>
+				<div class="option-one" id="f7" data-index="7" onclick="fourClick(this)">今の仕事を中⻑期的に続けるイメージができないから</div>
+				<div class="option-one" id="f8" data-index="8" onclick="fourClick(this)">間関係に疲れてしまったから</div>
 			</div>
 
 			<div class="next">
@@ -332,11 +330,11 @@
 			</div>
 
 			<div class="four-options">
-				<div class="option-one" id="five1" data-index = "1" onclick="fiveClick(this)">年収が⾼いから</div>
-				<div class="option-one" id="five2" data-index = "2" onclick="fiveClick(this)">⾃分のペースで仕事ができるから</div>
-				<div class="option-one" id="five3" data-index = "3" onclick="fiveClick(this)">⼈の役に⽴っている感覚を持てるから</div>
-				<div class="option-one" id="five4" data-index = "4" onclick="fiveClick(this)">シフト制で勤務に融通が効きそうだから</div>
-				<div class="option-one" id="five5" data-index = "5" onclick="fiveClick(this)">年齢を重ねても仕事を続けられそうだから</div>
+				<div class="option-one" id="five1" data-index="1" onclick="fiveClick(this)">年収が⾼いから</div>
+				<div class="option-one" id="five2" data-index="2" onclick="fiveClick(this)">⾃分のペースで仕事ができるから</div>
+				<div class="option-one" id="five3" data-index="3" onclick="fiveClick(this)">⼈の役に⽴っている感覚を持てるから</div>
+				<div class="option-one" id="five4" data-index="4" onclick="fiveClick(this)">シフト制で勤務に融通が効きそうだから</div>
+				<div class="option-one" id="five5" data-index="5" onclick="fiveClick(this)">年齢を重ねても仕事を続けられそうだから</div>
 				<div class="next-img-five">
 					<img src="./assets/img/next.png" alt="">
 				</div>
@@ -400,11 +398,11 @@
 				<div class="next-img-six">
 					<img src="./assets/img/next.png" alt="">
 				</div>
-				<div class="option-one" id="sixArea1" data-index = "1" onclick="sixAreaClick(this)">東京都</div>
-				<div class="option-one" id="sixArea2" data-index = "2" onclick="sixAreaClick(this)">神奈川県</div>
-				<div class="option-one" id="sixArea3" data-index = "3" onclick="sixAreaClick(this)">埼⽟県</div>
-				<div class="option-one" id="sixArea4" data-index = "4" onclick="sixAreaClick(this)">千葉県</div>
-				<div class="option-one" id="sixArea5" data-index = "5" onclick="sixAreaClick(this)">その他の地域</div>
+				<div class="option-one" id="sixArea1" data-index="1" onclick="sixAreaClick(this)">東京都</div>
+				<div class="option-one" id="sixArea2" data-index="2" onclick="sixAreaClick(this)">神奈川県</div>
+				<div class="option-one" id="sixArea3" data-index="3" onclick="sixAreaClick(this)">埼⽟県</div>
+				<div class="option-one" id="sixArea4" data-index="4" onclick="sixAreaClick(this)">千葉県</div>
+				<div class="option-one" id="sixArea5" data-index="5" onclick="sixAreaClick(this)">その他の地域</div>
 			</div>
 			<div class="common-description-six">
 				<div class="common-img">
@@ -423,38 +421,34 @@
 			</div>
 			<p class="common-text">（必須 複数選択可）</p>
 			<div class="sixth-one border-b">
-				<div class="option-one" id="sixWay1" data-index = "1" onclick="sixWayClick(this)">電⾞</div>
-				<div class="option-one" id="sixWay2" data-index = "2" onclick="sixWayClick(this)">バス</div>
-				<div class="option-one" id="sixWay3" data-index = "3" onclick="sixWayClick(this)">⾃家⽤⾞</div>
-				<div class="option-one" id="sixWay4" data-index = "4" onclick="sixWayClick(this)">バイク</div>
-				<div class="option-one" id="sixWay5" data-index = "5" onclick="sixWayClick(this)">⾃転⾞</div>
-				<div class="option-one" id="sixWay6" data-index = "6" onclick="sixWayClick(this)">徒歩圏内が良い</div>
-			</div>
-
-			<div class="common-title">
-				<span></span>
-				<p>お住まいの郵便番号</p>
-			</div>
-
-			<p class="common-text">（必須 複数選択可）</p>
-			<div class="six-input">
-				<div class="six-input-first">
-					<input type="text" class="custom-input-one" id="custom-sixinput-one"
-						title="Please enter a valid postal code (e.g., 12345 or 12345-6789)">
-					<div class="six-input-btn" onclick="checkPost()">確認</div>
-				</div>
-				<div class="postInputError" id="postInputError">
-					郵便番号を正確に確認してください。
-				</div>
+				<div class="option-one" id="sixWay1" data-index="1" onclick="sixWayClick(this)">電⾞</div>
+				<div class="option-one" id="sixWay2" data-index="2" onclick="sixWayClick(this)">バス</div>
+				<div class="option-one" id="sixWay3" data-index="3" onclick="sixWayClick(this)">⾃家⽤⾞</div>
+				<div class="option-one" id="sixWay4" data-index="4" onclick="sixWayClick(this)">バイク</div>
+				<div class="option-one" id="sixWay5" data-index="5" onclick="sixWayClick(this)">⾃転⾞</div>
+				<div class="option-one" id="sixWay6" data-index="6" onclick="sixWayClick(this)">徒歩圏内が良い</div>
 			</div>
 			<div class="common-title">
 				<span></span>
 				<p>最寄駅を教えてください</p>
 			</div>
-
 			<p class="common-text">（任意 記述式）</p>
 			<div class="nearest-station">
 				<input type="text" class="custom-input" id="nearest_station">
+			</div>
+			<div class="common-title">
+				<span></span>
+				<p>お住まいの郵便番号</p>
+			</div>
+			<p class="common-text">（必須 複数選択可）</p>
+			<div class="six-input">
+				<div class="six-input-first">
+					<input type="text" class="custom-input-one" id="custom-sixinput-one"
+						title="Please enter a valid postal code (e.g., 12345 or 12345-6789)">
+				</div>
+				<div class="postInputError" id="postInputError">
+					郵便番号を正確に確認してください。
+				</div>
 			</div>
 			<div class="nearest-description">
 				<div class="common-img">
@@ -469,7 +463,7 @@
 			</div>
 			<div class="next">
 				<span class="next-button" id="six-before" onclick="gotoFive()">前へ</span>
-				<span class="next-button disabled" id="six-next" onclick="sixHidden()" >次へ</span>
+				<span class="next-button disabled" id="six-next" onclick="sixHidden()">次へ</span>
 			</div>
 		</div>
 
@@ -513,10 +507,14 @@
 				<div class="next-img-seven">
 					<img src="./assets/img/next.png" alt="">
 				</div>
-				<div class="option-one-seven" id="accident1" data-index = "1"  onclick="sevenAccident(this)">これまで事故をしたことはない</div>
-				<div class="option-one-seven" id="accident2" data-index = "2"  onclick="sevenAccident(this)">駐⾞場でぶつけた / 縁⽯で擦った程度の軽い事故</div>
-				<div class="option-one-seven" id="accident3" data-index = "3" onclick="sevenAccident(this)">居眠り運転をしたことがある</div>
-				<div class="option-one-seven" id="accident4" data-index = "4"  onclick="sevenAccident(this)">⼈⾝事故を起こしたことがある</div>
+				<div class="option-one-seven" id="accident1" data-index="1" onclick="sevenAccident(this)">これまで事故をしたことはない
+				</div>
+				<div class="option-one-seven" id="accident2" data-index="2" onclick="sevenAccident(this)">駐⾞場でぶつけた /
+					縁⽯で擦った程度の軽い事故</div>
+				<div class="option-one-seven" id="accident3" data-index="3" onclick="sevenAccident(this)">居眠り運転をしたことがある
+				</div>
+				<div class="option-one-seven" id="accident4" data-index="4" onclick="sevenAccident(this)">⼈⾝事故を起こしたことがある
+				</div>
 			</div>
 			<div class="nearest-description">
 				<div class="common-img">
@@ -604,7 +602,7 @@
 				<div class="last-input">
 					<input type="text" class="custom-phone-input" id="phone_number" placeholder="電話番号">
 				</div>
-				
+
 			</div>
 			<div class="common-title">
 				<span></span>
@@ -614,7 +612,7 @@
 				<div class="last-input">
 					<input type="text" class="custom-phone-input" id="email" placeholder="メールアドレス">
 				</div>
-				
+
 				<div class="phoneInputError" id="phoneInputError">
 					電話番号とメールを正確に入力してください。
 				</div>
@@ -639,17 +637,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="successModal" class="success_modal">
-			<div class="modal-content">
-				<div class="modal-congrate">
-					<p>成功！ リクエストは完了しました。</p>
-					<span class="close-button" onclick="closeModal()">&times;</span>
-				</div>
-				<div class="gofirst-btn" onclick="goTopPage()">
-					最初のページに戻る
-				</div>
-			</div>
-		</div>
+
 	</main>
 
 	<footer id="footer" class="footer">
