fource version 7/4 taxi-mate.jp

--- a/job/01/index.html
+++ b/job/01/index.html
@@ -16,12 +16,11 @@
 		content="タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link rel="manifest" href="site.webmanifest">
-	<link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-180x180.png">
-	<link rel="icon" href="images/favicons/favicon.ico">
+	<link rel="apple-touch-icon" type="image/png" href="../../images/favicons/apple-touch-icon-180x180.png">
+	<link rel="icon" href="../../images/favicons/favicon.ico">
 
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../../css/normalize.css">
+	<link rel="stylesheet" href="../../css/style.css">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -37,25 +36,25 @@
 	<header>
 		<article class="header_wrapper">
 			<figure>
-				<a href="https://taxi-mate.jp/">
-					<img src="images/logo.webp" alt="タクシーメイト希望を叶える転職サイト">
+				<a href="../../index.html">
+					<img src="../../images/logo.webp" alt="タクシーメイト希望を叶える転職サイト">
 				</a>
 			</figure>
 			<nav>
 				<ul>
 					<li>
-						<a href="about.html">
+						<a href="../../about">
 							タクシーメイトとは
 						</a>
-						<a href="jobs.html">
+						<a href="../../job">
 							求人一覧
 						</a>
 					</li>
 					<li>
-						<a href="contact.html" class="button b_mail">
+						<a href="../../contact" class="button b_mail">
 							<span>メールで求人を受け取る</span>
 						</a>
-						<a href="registration.html" class="button b_service">
+						<a href="../../registration" class="button b_service">
 							<span>転職支援サービスに登録</span>
 						</a>
 						<a href="tel:0120-935-196" class="button b_tel">
@@ -82,17 +81,17 @@
 			<div class="wrapper">
 				<ul class="menu">
 					<li>
-						<a href="about.html">タクシーメイトとは</a>
-						<a href="jobs.html">求人一覧</a>
+						<a href="../../about">タクシーメイトとは</a>
+						<a href="../../job">求人一覧</a>
 					</li>
 					<li>
-						<a href="registration.html" class="button b_service">
+						<a href="../../registration" class="button b_service">
 							＼転職スピードNo.1／
 							<span>
 								転職支援サービスに登録(無料)
 							</span>
 						</a>
-						<a href="contact.html" class="button b_mail">
+						<a href="../../contact" class="button b_mail">
 							＼忙しいあなたは／
 							<span>
 								メールで求人を受け取る
@@ -120,42 +119,132 @@
 		</article>
 	</header>
 	<main>
-		<section class="thanks">
-			<section class="page_title">
-				<h1>
-					お問い合わせありがとうございます。
-				</h1>
-				<p class="text_sub">
-					確認後、数日中に返信させていただきます。<br>
-					少しばかりお待ちくださいませ。
-				</p>
+		<section class="jobs-master">
+			<section class="top">
+				<figure>
+					<img src="../../images/page_car.webp" alt="タクシーイラスト">
+				</figure>
+				<div class="jobs-title">
+					<p class="text_sub">
+						タクシーメイトの厳選した求人
+					</p>
+					<h2>
+						迎車専用ドライバー求人！業界トップクラスの独自無線あり/GOアプリ導入
+					</h2>
+				</div>
 			</section>
-			<a href="index.html" class="button">
-				<span>ホームに戻る</span>
-			</a>
+			<div class="flex">
+				<section class="overview">
+					<figure>
+						<img src="../../images/page_car.webp" alt="タクシーイラスト">
+					</figure>
+					<table>
+						<tr>
+							<th>
+								会社名
+							</th>
+							<td>
+								お問い合わせ後に公開
+							</td>
+						</tr>
+						<tr>
+							<th>
+								勤務地
+							</th>
+							<td>
+								都内9拠点から選べる都内9拠点から選べる都内9拠点から選べる
+							</td>
+						</tr>
+						<tr>
+							<th>
+								給与
+							</th>
+							<td>
+								45〜60万円
+							</td>
+						</tr>
+						<tr>
+							<th>
+								面接
+							</th>
+							<td>
+								<ul>
+									<li>
+										・平日
+									</li>
+								</ul>
+							</td>
+						</tr>
+					</table>
+				</section>
+				<section class="page_link_01">
+					<article>
+						<div>
+							<h2>
+								こちらの求人にメールで応募
+							</h2>
+							<p>
+								土日祝日を除く1営業日以内に求人をお送りいたします
+							</p>
+						</div>
+						<a href="../../contact" class="button b_mail">
+							＼忙しいあなたは／
+							<span>
+								メールで応募する
+							</span>
+						</a>
+					</article>
+					<article>
+						<div>
+							<h2>
+								今すぐお電話で相談
+							</h2>
+							<p>
+								数分のお電話のみで推薦書の作成とタクシー会社の紹介をします
+							</p>
+						</div>
+						<a href="tel:0120-935-196" class="button b_tel">
+							お電話のご相談はこちらから
+							<span>
+								0120-935-196
+							</span>
+							<div>
+								<p>
+									<span>平日</span>
+									10:00-19:00
+								</p>
+								<p>
+									<span>定休日</span>
+									土日・祝日
+								</p>
+							</div>
+						</a>
+					</article>
+				</section>
+			</div>
 		</section>
 	</main>
 	<footer>
 		<figure>
-			<img src="images/logo.webp" alt="タクシーメイト希望を叶える転職サイト">
+			<img src="../../images/logo.webp" alt="タクシーメイト希望を叶える転職サイト">
 		</figure>
 		<ul>
 			<li>
-				<a href="https://taxi-mate.jp">
+				<a href="../../index.html">
 					ホーム
 				</a>
-				<a href="about.html">
+				<a href="../../about">
 					タクシーメイトとは
 				</a>
-				<a href="jobs.html">
+				<a href="../../job">
 					求人一覧
 				</a>
 			</li>
 			<li>
-				<a href="contact.html">
+				<a href="../../contact">
 					メールで求人を受け取る
 				</a>
-				<a href="registration.html">
+				<a href="../../registration">
 					転職支援サービスに登録
 				</a>
 			</li>
@@ -163,7 +252,7 @@
 				<a href="https://anytrail.jp/" target="_blank">
 					運営会社
 				</a>
-				<a href="privacy.html">
+				<a href="../../privacy">
 					プライバシーポリシー
 				</a>
 			</li>
