--- a/job/03/index.html
+++ b/job/03/index.html
@@ -16,12 +16,11 @@
 		content="タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link rel="manifest" href="site.webmanifest">
-	<link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-180x180.png">
-	<link rel="icon" href="images/favicons/favicon.ico">
+	<link rel="apple-touch-icon" type="image/png" href="../../images/favicons/apple-touch-icon-180x180.png">
+	<link rel="icon" href="../../images/favicons/favicon.ico">
 
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../../css/normalize.css">
+	<link rel="stylesheet" href="../../css/style.css">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -37,25 +36,25 @@
 	<header>
 		<article class="header_wrapper">
 			<figure>
-				<a href="https://taxi-mate.jp/">
-					<img src="images/logo.webp" alt="タクシーメイト希望を叶える転職サイト">
+				<a href="../../index.html">
+					<img src="../../images/logo.webp" alt="タクシーメイト希望を叶える転職サイト">
 				</a>
 			</figure>
 			<nav>
 				<ul>
 					<li>
-						<a href="about.html">
+						<a href="../../about">
 							タクシーメイトとは
 						</a>
-						<a href="jobs.html">
+						<a href="../../job">
 							求人一覧
 						</a>
 					</li>
 					<li>
-						<a href="contact.html" class="button b_mail">
+						<a href="../../contact" class="button b_mail">
 							<span>メールで求人を受け取る</span>
 						</a>
-						<a href="registration.html" class="button b_service">
+						<a href="../../registration" class="button b_service">
 							<span>転職支援サービスに登録</span>
 						</a>
 						<a href="tel:0120-935-196" class="button b_tel">
@@ -82,17 +81,17 @@
 			<div class="wrapper">
 				<ul class="menu">
 					<li>
-						<a href="about.html">タクシーメイトとは</a>
-						<a href="jobs.html">求人一覧</a>
+						<a href="../../about">タクシーメイトとは</a>
+						<a href="../../job">求人一覧</a>
 					</li>
 					<li>
-						<a href="registration.html" class="button b_service">
+						<a href="../../registration" class="button b_service">
 							＼転職スピードNo.1／
 							<span>
 								転職支援サービスに登録(無料)
 							</span>
 						</a>
-						<a href="contact.html" class="button b_mail">
+						<a href="../../contact" class="button b_mail">
 							＼忙しいあなたは／
 							<span>
 								メールで求人を受け取る
@@ -123,7 +122,7 @@
 		<section class="jobs-master">
 			<section class="top">
 				<figure>
-					<img src="images/page_car.webp" alt="タクシーイラスト">
+					<img src="../../images/page_car.webp" alt="タクシーイラスト">
 				</figure>
 				<div class="jobs-title">
 					<p class="text_sub">
@@ -137,7 +136,7 @@
 			<div class="flex">
 				<section class="overview">
 					<figure>
-						<img src="images/page_car.webp" alt="タクシーイラスト">
+						<img src="../../images/page_car.webp" alt="タクシーイラスト">
 					</figure>
 					<table>
 						<tr>
@@ -188,7 +187,7 @@
 								土日祝日を除く1営業日以内に求人をお送りいたします
 							</p>
 						</div>
-						<a href="contact.html" class="button b_mail">
+						<a href="../../contact" class="button b_mail">
 							＼忙しいあなたは／
 							<span>
 								メールで応募する
@@ -227,25 +226,25 @@
 	</main>
 	<footer>
 		<figure>
-			<img src="images/logo.webp" alt="タクシーメイト希望を叶える転職サイト">
+			<img src="../../images/logo.webp" alt="タクシーメイト希望を叶える転職サイト">
 		</figure>
 		<ul>
 			<li>
-				<a href="https://taxi-mate.jp">
+				<a href="../../index.html">
 					ホーム
 				</a>
-				<a href="about.html">
+				<a href="../../about">
 					タクシーメイトとは
 				</a>
-				<a href="jobs.html">
+				<a href="../../job">
 					求人一覧
 				</a>
 			</li>
 			<li>
-				<a href="contact.html">
+				<a href="../../contact">
 					メールで求人を受け取る
 				</a>
-				<a href="registration.html">
+				<a href="../../registration">
 					転職支援サービスに登録
 				</a>
 			</li>
@@ -253,7 +252,7 @@
 				<a href="https://anytrail.jp/" target="_blank">
 					運営会社
 				</a>
-				<a href="about.html">
+				<a href="../../privacy">
 					プライバシーポリシー
 				</a>
 			</li>
