index.html style.css を長浜にて編集 7/4-1

--- a/lp-1/thanks/index.html
+++ b/lp-1/thanks/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thanks</title>
+    <title>お問い合わせありがとうございます｜タクシーメイト</title>
 </head>
 
 <body>
     <div class="thanks">
-        <h2>ありがとうございます。<br><span>正常に送信しました。</span></h2>
-        <a href="/index.html">
+        <h2>お問合せいただきありがとうございます。<br><span>確認後、数日中に返信させていただきます。少しばかりお待ちくださいませ。</span></h2>
+        <a href="/lp-1/">
             <div class="goTop">
                 トップページに戻る
             </div>
