--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="jp">
-
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta http-equiv="Pragma" content="no-cache" />
-	<meta http-equiv="Cache-Control" content="no-cache, must-revalidate" />
-	<meta name="robots" content="noydir" />
-	<meta name="robots" content="noodp" />
+	<meta http-equiv="Pragma" content="no-cache" /> <!-- 古いブラウザでキャッシュを無効にして常にサーバーから新しい情報を取得する -->
+	<meta http-equiv="Cache-Control" content="no-cache, must-revalidate" /> <!-- ページがキャッシュされる場合でもサーバーに問い合わせて新しいバージョンを取得する -->
+	<!-- <meta name="robots" content="noydir" /> -->
+	<!-- <meta name="robots" content="noodp" /> -->
 	<meta name="robots" content="noindex,nofollow" />
-	<title>ドライバー求人サービスなら【ドライバーキャリア】に登録</title>
-	<meta name="description"
-		content="ドライバーの求人・転職情報をお探しなら、ドライバー・トラック運転手の人材紹介において豊富な実績がある、「ドライバーキャリア」。月間30万以上のユーザーが利用！全国各地、あなたの転職を無料でサポートいたします。">
-	<meta name="keywords" content="ドライバー, ドライバーキャリア, 求人, トラック運転手">
-	<link rel="canonical" href="https://x-work.jp/">
+	<title>タクシー転職するなら【タクシーメイト】に登録｜タクシーメイト</title>
+	<meta name="description" content="タクシーの求人・転職情報をお探しなら一都三県で豊富な実績のある「タクシーメイト」。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
+	<meta name="keywords" content="タクシーメイト,タクシー,ドライバー,求人,転職">
+	<link rel="canonical" href="https://taxi-mate.jp/"> <!-- /taxi-mate.jp, /taxi-mate.jp/index.html でアクセスされても /taxi-mate.jp/ が正規だという記載 -->
+	<link rel="icon" href="../images/favicons/favicon.ico">
 
-	<!-- [OPEN GRAPH] -->
+	<!-- SNS -->
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="ドライバー求人サービスなら【ドライバーキャリア】に登録">
-	<meta property="og:description"
-		content="ドライバーの求人・転職情報をお探しなら、ドライバー・トラック運転手の人材紹介において豊富な実績がある、「ドライバーキャリア」。月間30万以上のユーザーが利用！全国各地、あなたの転職を無料でサポートいたします。">
-	<meta name="twitter:title" content="ドライバー求人サービスなら【ドライバーキャリア】に登録">
-	<meta name="twitter:description"
-		content="ドライバーの求人・転職情報をお探しなら、ドライバー・トラック運転手の人材紹介において豊富な実績がある、「ドライバーキャリア」。月間30万以上のユーザーが利用！全国各地、あなたの転職を無料でサポートいたします。">
-	<!-- //////////// -->
+	<meta property="og:title" content="タクシー転職するなら【タクシーメイト】に登録｜タクシーメイト">
+	<meta property="og:description" content="タクシーの求人・転職情報をお探しなら一都三県で豊富な実績のある「タクシーメイト」。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
+	<!-- SNS END -->
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="preconnect" href="https://fonts.googleapis.com"> <!-- GoogleFontの読み込み高速化 -->
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- GoogleFontの読み込み高速化 -->
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./assets/css/style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
@@ -38,28 +33,21 @@
 	<header id="header" class="header">
 		<div class="header-top">
 			<div>
-				<a href="https://x-work.jp/" class="header-logo">
-					<img src="./assets/img/logo-white.png" alt="ドライバーキャリア">
+				<a href="./" class="header-logo">
+					<img src="./assets/img/logo-white.png" alt="タクシーメイト">
 				</a>
-				<span class="header-top-sm-txt">powered by</span>
-				<img class="xwork" src="./assets/img/logo-xwork-white.png.webp" alt="XWORKのロゴ">
+				<!-- <span class="header-top-sm-txt">powered by</span>
+				<img class="anytrail" src="./assets/img/logo-anytrail-white.png.webp" alt="AnyTrail株式会社"> -->
 			</div>
-			<span>厚生労働大臣許可13-ユ-310800</span>
+			<span>厚生労働大臣許可13-ユ-316113</span>
 		</div>
 		<div class="header-bottom">
 			<p>
-				<span class="green-txt">ハローワーク</span>
-				<span>非公開</span>
-				<span class="sm-txt">も多数！</span>
-				<span>新着•</span>
-			</p>
-			<p>
-				<span class="pink-txt">レア求人</span>
-				<span class="sm-txt">を</span>
-				<span>会員限定でご紹介！</span>
+				<span class="green-txt">月給45万円が目指せる求人</span>
+				<span class="sm-txt">のみを</span>
+				<span>ご紹介！</span>
 			</p>
 		</div>
-		<a class="hiring-manager" href="https://www.xmile.co.jp/service/drivercareer">採用ご担当者様はこちら</a>
 	</header>
 
 	<main id="main" class="mainpage">
@@ -111,7 +99,6 @@
 				<span></span>
 				<p>保有している免許について教えてください</p>
 			</div>
-			<p class="common-text">（必須 選択したら次ページへ）</p>
 			<div class="second-three-check">
 				<div class="second-three-check-one">
 					<div class="red-taxi" id="redtaxi" onclick="secondCheck1()">
@@ -143,7 +130,7 @@
 				</div>
 			</div>
 			<div class="next-second">
-				<span class="next-button" id="second-before" onclick="gotoFirst()">前へ</span>
+				<span class="next-button" id="second-before" onclick="gotoFirst()">< 戻る</span>
 
 			</div>
 		</div>
@@ -183,8 +170,6 @@
 				<span></span>
 				<p>考えている転職時期を教えてください</p>
 			</div>
-			<p class="common-text">（必須 選択したら次ページへ）</p>
-
 
 			<div class="third-five-part">
 				<div class="third-one">
@@ -227,7 +212,7 @@
 				</div>
 			</div>
 			<div class="next-third">
-				<span class="next-button" id="third-before" onclick="gotoSecond()">前へ</span>
+				<span class="next-button" id="third-before" onclick="gotoSecond()">< 戻る</span>
 
 
 			</div>
@@ -266,9 +251,9 @@
 
 			<div class="common-title">
 				<span></span>
-				<p>今回の転職理由について教えてください</p>
+				<p>今回の転職理由について教えてください(複数)</p>
 			</div>
-			<p class="common-text">（必須 選択したら次ページへ）</p>
+
 			<div class="four-options">
 				<div class="next-img-four">
 					<img src="./assets/img/next.png" alt="">
@@ -284,7 +269,7 @@
 			</div>
 
 			<div class="next">
-				<span class="next-button" id="third-before" onclick="gotoThird()">前へ</span>
+				<span class="next-button" id="third-before" onclick="gotoThird()">< 戻る</span>
 
 				<span class="next-button disabled" id="four-next" onclick="fourHidden()">次へ</span>
 
@@ -323,10 +308,7 @@
 			</div>
 			<div class="common-title-five">
 				<span></span>
-				<div class="five-title">タクシー業界に感じている魅⼒について教え<br>
-					てください
-					<small class="common-text">（必須 選択したら次ページへ）</small>
-				</div>
+				<div class="five-title">タクシー業界に感じている魅⼒について教えてください(複数)</div>
 			</div>
 
 			<div class="four-options">
@@ -352,7 +334,7 @@
 				</div>
 			</div>
 			<div class="next">
-				<span class="next-button" id="five-before" onclick="gotoFour()">前へ</span>
+				<span class="next-button" id="five-before" onclick="gotoFour()">< 戻る</span>
 
 				<span class="next-button disabled" id="five-next" onclick="fiveHidden()">次へ</span>
 
@@ -393,7 +375,6 @@
 				<span></span>
 				<p>お住まいの地域を教えてください</p>
 			</div>
-			<p class="common-text">（必須 選択式）</p>
 			<div class="sixth-one">
 				<div class="next-img-six">
 					<img src="./assets/img/next.png" alt="">
@@ -417,9 +398,8 @@
 			</div>
 			<div class="common-title">
 				<span></span>
-				<p>通勤⼿段について教えてください</p>
+				<p>通勤⼿段について教えてください(全て)</p>
 			</div>
-			<p class="common-text">（必須 複数選択可）</p>
 			<div class="sixth-one border-b">
 				<div class="option-one" id="sixWay1" data-index="1" onclick="sixWayClick(this)">電⾞</div>
 				<div class="option-one" id="sixWay2" data-index="2" onclick="sixWayClick(this)">バス</div>
@@ -430,21 +410,19 @@
 			</div>
 			<div class="common-title">
 				<span></span>
-				<p>最寄駅を教えてください</p>
+				<p>最寄駅を教えてください(任意)</p>
 			</div>
-			<p class="common-text">（任意 記述式）</p>
 			<div class="nearest-station">
-				<input type="text" class="custom-input" id="nearest_station">
+				<input type="text" class="custom-input" id="nearest_station" placeholder="例：上野駅など。電車/バスの場合のみ">
 			</div>
 			<div class="common-title">
 				<span></span>
 				<p>お住まいの郵便番号</p>
 			</div>
-			<p class="common-text">（必須 複数選択可）</p>
 			<div class="six-input">
 				<div class="six-input-first">
-					<input type="number" class="custom-input-one" id="custom-sixinput-one"
-						placeholder="1234567" oninput="validateNumberInput(this)">
+					<input type="text" inputmode="numeric" pattern="\d*" class="custom-input-one" id="custom-sixinput-one"
+						placeholder="数字7桁で入力してください" oninput="validateNumberInput(this)">
 				</div>
 				<div class="postInputError" id="postInputError">
 					郵便番号を正確に確認してください。
@@ -462,7 +440,7 @@
 				</div>
 			</div>
 			<div class="next-six">
-				<span class="next-button" id="six-before" onclick="gotoFive()">前へ</span>
+				<span class="next-button" id="six-before" onclick="gotoFive()">< 戻る</span>
 			</div>
 		</div>
 
@@ -501,7 +479,6 @@
 				<span></span>
 				<p>運転中の事故について教えてください</p>
 			</div>
-			<p class="common-text">（必須 選択式。複数回答可）</p>
 			<div class="four-options-seven" id="four_options_seven">
 				<div class="next-img-seven">
 					<img src="./assets/img/next.png" alt="">
@@ -527,7 +504,7 @@
 				</div>
 			</div>
 			<div class="next">
-				<span class="next-button" id="seven-before" onclick="gotoSix()">前へ</span>
+				<span class="next-button" id="seven-before" onclick="gotoSix()">< 戻る</span>
 
 				<span class="next-button disabled" id="seven-next" onclick="sevenHidden()">次へ</span>
 
@@ -566,7 +543,7 @@
 			</div>
 			<div class="common-title">
 				<span></span>
-				<p>お名前（必須 記述式）</p>
+				<p>お名前</p>
 			</div>
 			<div class="last-name">
 				<div class="last-name-input">
@@ -583,33 +560,37 @@
 			</div>
 			<div class="common-title">
 				<span></span>
-				<p>年代（必須 選択式）</p>
+				<p>年代</p>
 			</div>
 			<div class="age-last">
 				<select class="form-control age-option" id="sel1">
+					<option disabled selected value>選択してください</option>
 					<option class="age-option-item" value="10代">10代</option>
 					<option class="age-option-item" value="20代">20代</option>
 					<option class="age-option-item" value="30代">30代</option>
 					<option class="age-option-item" value="40代">40代</option>
+					<option class="age-option-item" value="50代">50代</option>
+					<option class="age-option-item" value="60代">60代</option>
+					<option class="age-option-item" value="70代">70代</option>
 				</select>
 			</div>
 			<div class="common-title">
 				<span></span>
-				<p>電話番号（必須 記述式）</p>
+				<p>電話番号</p>
 			</div>
 			<div class="last-name">
 				<div class="last-input">
-					<input type="text" class="custom-phone-input" id="phone_number" placeholder="電話番号">
+					<input type="text" inputmode="numeric" pattern="\d*" class="custom-phone-input" id="phone_number" placeholder="例：03-6825-2404">
 				</div>
 
 			</div>
 			<div class="common-title">
 				<span></span>
-				<p>メールアドレス（任意 記述式）</p>
+				<p>メールアドレス</p>
 			</div>
 			<div class="last-name">
 				<div class="last-input">
-					<input type="text" class="custom-phone-input" id="email" placeholder="メールアドレス">
+					<input type="text" class="custom-phone-input" id="email" placeholder="例：advisor@anytrai.jp">
 				</div>
 
 				<div class="phoneInputError" id="phoneInputError">
@@ -628,9 +609,9 @@
 				</div>
 			</div>
 			<div class="next">
-				<span class="next-button" id="last-before" onclick="gotoSeven()">前へ</span>
+				<span class="next-button" id="last-before" onclick="gotoSeven()">< 戻る</span>
 
-				<span class="next-button" id="last-next" onclick="completeStep()">次へ</span>
+				<span class="next-button" id="last-next" onclick="completeStep()">登録する</span>
 				<div class="next-seven-img" id="">
 					<img src="./assets/img/next.png" alt="">
 				</div>
@@ -640,21 +621,13 @@
 	</main>
 
 	<footer id="footer" class="footer">
-		<div class="footer-update">
-			<p>※ ハローワーク非公開求人も多数 ※</p>
-			<div class="hire-time">
-				<a class="sp hire" href="https://driver.joblogi.jp/lrs_client">採用ご担当者様はこちら</a>
-				<p class="footer-update-date">06月21日 13:48 最新求人更新</p>
-			</div>
-		</div>
 		<div class="footer-relations">
 			<div class="footer-links">
-				<a class="link-item" href="#">利用規約</a>
-				<a class="link-item" href="https://www.xmile.co.jp/policy/06">個人情報の取扱</a>
-				<a class="link-item" href="#">ドライバーキャリアとは</a>
-				<a class="link-item" href="#">運営会社</a>
+				<a class="link-item" href="https://anytrail.jp/privacy_policy">プライバシーポリシー</a>
+				<a class="link-item" href="https://taxi-mate.jp/about/">タクシーメイトとは</a>
+				<a class="link-item" href="https://anytrail.jp/">運営会社</a>
 			</div>
-			<p class="copyright">(C) XMile Inc. All Rights Reserved.</p>
+			<p class="copyright">2024 AnyTrail Inc. All Rights Reserved.</p>
 		</div>
 	</footer>
 
@@ -664,19 +637,4 @@
 	<script src="./assets/js/core.js"></script>
 	<script src="./assets/js/common.js"></script>
 </body>
-
-<!-- G/Y TAG -->
-<script
-	type="text/javascript">var dataLayer = dataLayer || []; dataLayer.push({ originalLocation: document.location.protocol + String.fromCharCode(47, 47) + document.location.hostname + document.location.pathname + document.location.search });</script>
-<script>var ua = navigator.userAgent; var _mbtm = {}; if (ua.indexOf("iPhone") > 0 || (ua.indexOf("Android") > 0)) { _mbtm = { device: "m", app: "SP" } } else { _mbtm = { device: "d", app: "PC" } }; var dataLayer = dataLayer || []; dataLayer.push({ google_tag_params: window._mbtm });</script>
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-5GQJJT" height="0" width="0"
-		style="display:none;visibility:hidden"></iframe></noscript>
-<script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = '//www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'GTM-5GQJJT');</script>
-<script
-	type="text/javascript">(function () { var tagjs = document.createElement("script"); var s = document.getElementsByTagName("script")[0]; tagjs.async = true; tagjs.src = "//s.yjtag.jp/tag.js#site=SW7nshF"; s.parentNode.insertBefore(tagjs, s); }());</script>
-<noscript><iframe src="//b.yjtag.jp/iframe?c=SW7nshF" width="1" height="1" frameborder="0" scrolling="no"
-		marginheight="0" marginwidth="0"></iframe></noscript>
-<script type="text/javascript">var dataLayer = dataLayer || []; dataLayer.push({ event: "virtualPageView" });</script>
-<!-- G/Y TAG -->
-
 </html>
