【Stable】css html のみ変更した安定版 7/4の作業の保存

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -322,7 +322,7 @@
 				</div>
 			</div>
 
-			<div class="common-description">
+			<!-- <div class="common-description">
 				<div class="common-img">
 					<img src="./assets/img/man.png" alt="">
 				</div>
@@ -332,7 +332,7 @@
 						「明確な条件がある⼈ほどご希望に<br>合ったタクシー会社を選びます。
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="next">
 				<span class="next-button" id="five-before" onclick="gotoFour()">< 戻る</span>
 
