lp-1 以下にtag managerを追加

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="ja">
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -13,6 +13,14 @@
 	<meta name="keywords" content="タクシーメイト,タクシー,ドライバー,求人,転職">
 	<link rel="canonical" href="https://taxi-mate.jp/"> <!-- /taxi-mate.jp, /taxi-mate.jp/index.html でアクセスされても /taxi-mate.jp/ が正規だという記載 -->
 	<link rel="icon" href="../images/favicons/favicon.ico">
+
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KX8ZQFSX');</script>
+	<!-- End Google Tag Manager -->
 
 	<!-- SNS -->
 	<meta property="og:type" content="website">
@@ -30,6 +38,10 @@
 </head>
 
 <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KX8ZQFSX"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<header id="header" class="header">
 		<div class="header-top">
 			<div>
