ルートディレクトリの旧LPのhead情報を大幅に変更

--- a/job/03/index.html
+++ b/job/03/index.html
@@ -1,20 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
-<title>タクシーメイト</title>
-
 <head>
-	<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-KX8ZQFSX');</script>
-	<!-- End Google Tag Manager -->
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="description"
 		content="タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<title>タクシー求人｜ピアスOK！タトゥーOK！若者に優しく自由な社風のタクシー会社</title>
+
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-KX8ZQFSX');</script>
+	<!-- End Google Tag Manager -->
 
 	<link rel="apple-touch-icon" type="image/png" href="../../images/favicons/apple-touch-icon-180x180.png">
 	<link rel="icon" href="../../images/favicons/favicon.ico">
@@ -30,7 +31,7 @@
 
 <body>
 	<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KX8ZQFSX"
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KX8ZQFSX"
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	<header>
