--- a/registration/index.html
+++ b/registration/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <title>タクシーメイト</title>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-  <head>
+    <title>無料転職支援サービスに登録する</title>
+
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
@@ -17,16 +28,6 @@
       })(window, document, "script", "dataLayer", "GTM-KX8ZQFSX");
     </script>
     <!-- End Google Tag Manager -->
-    <meta charset="UTF-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta
-      name="description"
-      content="タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
     <link
       rel="apple-touch-icon"
@@ -56,9 +57,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0"
     />
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
@@ -732,5 +733,5 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script src="../js/registration.js"></script>
-  </body>
+</body>
 </html>
