ルートディレクトリへのリンクを全てindex.phpに変更

--- a/contact/index.html
+++ b/contact/index.html
@@ -65,7 +65,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <header>
     <article class="header_wrapper">
       <figure>
-        <a href="../index.html">
+        <a href="../index.php">
           <img
             src="../images/logo.webp"
             alt="タクシーメイト希望を叶える転職サイト"
@@ -308,7 +308,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </figure>
     <ul>
       <li>
-        <a href="../index.html"> ホーム </a>
+        <a href="../index.php"> ホーム </a>
         <a href="../about/"> タクシーメイトとは </a>
         <a href="../job/"> 求人一覧 </a>
       </li>
