--- a/privacy/index.html
+++ b/privacy/index.html
@@ -37,7 +37,7 @@
 	<header>
 		<article class="header_wrapper">
 			<figure>
-				<a href="../index.html">
+				<a href="../index.php">
 					<img src="../images/logo.webp" alt="タクシーメイト希望を叶える転職サイト">
 				</a>
 			</figure>
@@ -445,7 +445,7 @@
 		</figure>
 		<ul>
 			<li>
-				<a href="../index.html">
+				<a href="../index.php">
 					ホーム
 				</a>
 				<a href="../about/">
