--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<header>
 		<article class="header_wrapper">
 			<figure>
-				<a href="../index.html">
+				<a href="../index.php">
 					<img src="../images/logo.webp" alt="タクシーメイト希望を叶える転職サイト">
 				</a>
 			</figure>
@@ -403,7 +403,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		</figure>
 		<ul>
 			<li>
-				<a href="../index.html">
+				<a href="../index.php">
 					ホーム
 				</a>
 				<a href="../about/">
