--- a/contact/thanks/index.html
+++ b/contact/thanks/index.html
@@ -36,7 +36,7 @@
 	<header>
 		<article class="header_wrapper">
 			<figure>
-				<a href="../../index.html">
+				<a href="../../index.php">
 					<img src="../../images/logo.webp" alt="タクシーメイト希望を叶える転職サイト">
 				</a>
 			</figure>
@@ -129,7 +129,7 @@
 					少しばかりお待ちくださいませ。
 				</p>
 			</section>
-			<a href="../../index.html" class="button">
+			<a href="../../index.php" class="button">
 				<span>ホームに戻る</span>
 			</a>
 		</section>
@@ -140,7 +140,7 @@
 		</figure>
 		<ul>
 			<li>
-				<a href="../../index.html">
+				<a href="../../index.php">
 					ホーム
 				</a>
 				<a href="../../about/">
