--- a/registration/index.html
+++ b/registration/index.html
@@ -73,7 +73,7 @@
     <header>
       <article class="header_wrapper">
         <figure>
-          <a href="../index.html">
+          <a href="../index.php">
             <img
               src="../images/logo.webp"
               alt="タクシーメイト希望を叶える転職サイト"
@@ -716,7 +716,7 @@
       </figure>
       <ul>
         <li>
-          <a href="../index.html"> ホーム </a>
+          <a href="../index.php"> ホーム </a>
           <a href="../about/"> タクシーメイトとは </a>
           <a href="../job/"> 求人一覧 </a>
         </li>
