【Stable】ルートディレクトリの最終変更 7/4 安定版

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -26,6 +26,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="タクシー転職するなら【タクシーメイト】に登録｜タクシーメイト">
 	<meta property="og:description" content="タクシーの求人・転職情報をお探しなら一都三県で豊富な実績のある「タクシーメイト」。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
+	<meta property="og:image" content="/images/ogimage.png">
 	<!-- SNS END -->
 
 	<link rel="preconnect" href="https://fonts.googleapis.com"> <!-- GoogleFontの読み込み高速化 -->
