--- a/job/index.html
+++ b/job/index.html
@@ -17,6 +17,13 @@
 	})(window,document,'script','dataLayer','GTM-KX8ZQFSX');</script>
 	<!-- End Google Tag Manager -->
 
+	<!-- SNS -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="タクシーメイト">
+	<meta property="og:description" content="タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
+	<meta property="og:image" content="/images/ogimage.png">
+	<!-- SNS END -->
+
 	<link rel="apple-touch-icon" type="image/png" href="../images/favicons/apple-touch-icon-180x180.png">
 	<link rel="icon" href="../images/favicons/favicon.ico">
 
