--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -88,6 +88,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p>STEP<span>5</span></p>
 					<p>STEP<span>6</span></p>
 					<p>STEP<span>7</span></p>
+					<p>STEP<span>8</span></p>
 				</div>
 				<div class="step-car"><img src="./assets/img/step-car.png" alt=""></div>
 				<div class="step-road">
@@ -105,6 +106,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<span class="span-round6">
 					</span>
 					<span class="span-round7">
+					</span>
+					<span class="span-round8">
 					</span>
 				</div>
 			</div>
@@ -151,12 +154,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="second-head">
 				<div class="step-text">
 					<p>STEP<span>1</span></p>
-					<p class="step-check">STEP<span>2</span></p>
+					<p class="step-check">STEP<span class="span-check">2</span></p>
 					<p>STEP<span>3</span></p>
 					<p>STEP<span>4</span></p>
 					<p>STEP<span>5</span></p>
 					<p>STEP<span>6</span></p>
 					<p>STEP<span>7</span></p>
+					<p>STEP<span>8</span></p>
 				</div>
 				<div class="step-car-third"><img src="./assets/img/step-car.png" alt=""></div>
 				<div class="step-road">
@@ -175,7 +179,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</span>
 					<span class="span-round7">
 					</span>
-
+					<span class="span-round8">
+					</span>
 				</div>
 			</div>
 
@@ -233,13 +238,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="fourth" id="four">
 			<div class="second-head">
 				<div class="step-text">
-					<p>STEP<span class="span-check">1</span></p>
+					<p>STEP<span>1</span></p>
 					<p>STEP<span>2</span></p>
-					<p class="step-check">STEP<span>3</span></p>
+					<p class="step-check">STEP<span class="span-check">3</span></p>
 					<p>STEP<span>4</span></p>
 					<p>STEP<span>5</span></p>
 					<p>STEP<span>6</span></p>
 					<p>STEP<span>7</span></p>
+					<p>STEP<span>8</span></p>
 				</div>
 				<div class="step-car-four"><img src="./assets/img/step-car.png" alt=""></div>
 				<div class="step-road">
@@ -258,7 +264,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</span>
 					<span class="span-round7">
 					</span>
-
+					<span class="span-round8">
+					</span>
 				</div>
 			</div>
 
@@ -291,13 +298,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="fifth" id="five">
 			<div class="second-head">
 				<div class="step-text">
-					<p>STEP<span class="span-check">1</span></p>
+					<p>STEP<span>1</span></p>
 					<p>STEP<span>2</span></p>
 					<p>STEP<span>3</span></p>
-					<p class="step-check">STEP<span>4</span></p>
+					<p class="step-check">STEP<span class="span-check">4</span></p>
 					<p>STEP<span>5</span></p>
 					<p>STEP<span>6</span></p>
 					<p>STEP<span>7</span></p>
+					<p>STEP<span>8</span></p>
 				</div>
 				<div class="step-car-five"><img src="./assets/img/step-car.png" alt=""></div>
 				<div class="step-road">
@@ -316,7 +324,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</span>
 					<span class="span-round7">
 					</span>
-
+					<span class="span-round8">
+					</span>
 				</div>
 			</div>
 			<div class="common-title-five">
@@ -335,7 +344,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				</div>
 			</div>
 
-			<!-- <div class="common-description">
+			<div class="common-description">
 				<div class="common-img">
 					<img src="./assets/img/man.png" alt="">
 				</div>
@@ -345,7 +354,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						「明確な条件がある⼈ほどご希望に<br>合ったタクシー会社を選びます。
 					</div>
 				</div>
-			</div> -->
+			</div>
 			<div class="next">
 				<span class="next-button" id="five-before" onclick="gotoFour()">< 戻る</span>
 
@@ -353,17 +362,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 			</div>
 		</div>
+	
 
 		<div class="sixth" id="six">
 			<div class="second-head">
 				<div class="step-text">
-					<p>STEP<span class="span-check">1</span></p>
+					<p>STEP<span>1</span></p>
 					<p>STEP<span>2</span></p>
 					<p>STEP<span>3</span></p>
 					<p>STEP<span>4</span></p>
-					<p class="step-check">STEP<span>5</span></p>
+					<p class="step-check">STEP<span class="span-check">5</span></p>
 					<p>STEP<span>6</span></p>
 					<p>STEP<span>7</span></p>
+					<p>STEP<span>8</span></p>
 				</div>
 				<div class="step-car-six"><img src="./assets/img/step-car.png" alt=""></div>
 				<div class="step-road">
@@ -381,6 +392,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<span class="span-round6">
 					</span>
 					<span class="span-round7">
+					</span>
+					<span class="span-round8">
 					</span>
 				</div>
 			</div>
@@ -428,9 +441,56 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="nearest-station">
 				<input type="text" class="custom-input" id="nearest_station" placeholder="例：上野駅など。電車/バスの場合のみ">
 			</div>
+			
+			
+			<div class="next-six">
+				<span class="next-button" id="six-before" onclick="gotoFive()">< 戻る</span>
+
+				<span class="next-button disabled" id="six-next" onclick="sixHidden()">次へ</span>
+
+			</div>
+		</div>
+	
+		<div class="newstep" id="newstep">
+			<div class="second-head">
+				<div class="step-text">
+					<p>STEP<span>1</span></p>
+					<p>STEP<span>2</span></p>
+					<p>STEP<span>3</span></p>
+					<p>STEP<span>4</span></p>
+					<p>STEP<span>5</span></p>
+					<p class="step-check">STEP<span class="span-check">6</span></p>
+					<p>STEP<span>7</span></p>
+					<p>STEP<span>8</span></p>
+				</div>
+				<div class="step-car-newstep"><img src="./assets/img/step-car.png" alt=""></div>
+				<div class="step-road">
+					<p class="road-bar"></p>
+					<span class="span-round1">
+					</span>
+					<span class="span-round2">
+					</span>
+					<span class="span-round3">
+					</span>
+					<span class="span-round4">
+					</span>
+					<span class="span-round5">
+					</span>
+					<span class="span-round6">
+					</span>
+					<span class="span-round7">
+					</span>
+					<span class="span-round8">
+					</span>
+				</div>
+			</div>
+			
 			<div class="common-title">
 				<span></span>
 				<p>お住まいの郵便番号</p>
+			</div>
+			<div class="next-img-newstep">
+				<img src="./assets/img/next.png" alt="">
 			</div>
 			<div class="six-input">
 				<div class="six-input-first">
@@ -452,21 +512,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</div>
 				</div>
 			</div>
-			<div class="next-six">
-				<span class="next-button" id="six-before" onclick="gotoFive()">< 戻る</span>
+			<div class="next-newstep">
+				<span class="next-button" id="six-before" onclick="gotoSix()">< 戻る</span>
 			</div>
 		</div>
-
 		<div class="seven" id="seven">
 			<div class="second-head">
 				<div class="step-text">
-					<p>STEP<span class="span-check">1</span></p>
+					<p>STEP<span>1</span></p>
 					<p>STEP<span>2</span></p>
 					<p>STEP<span>3</span></p>
 					<p>STEP<span>4</span></p>
 					<p>STEP<span>5</span></p>
-					<p class="step-check">STEP<span>6</span></p>
-					<p>STEP<span>7</span></p>
+					<p>STEP<span>6</span></p>
+					<p class="step-check">STEP<span class="span-check">7</span></p>
+					<p>STEP<span>8</span></p>
 				</div>
 				<div class="step-car-seven"><img src="./assets/img/step-car.png" alt=""></div>
 				<div class="step-road">
@@ -485,7 +545,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</span>
 					<span class="span-round7">
 					</span>
-
+					<span class="span-round8">
+					</span>
 				</div>
 			</div>
 			<div class="common-title">
@@ -517,7 +578,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				</div>
 			</div>
 			<div class="next">
-				<span class="next-button" id="seven-before" onclick="gotoSix()">< 戻る</span>
+				<span class="next-button" id="seven-before" onclick="gotoNewStep()">< 戻る</span>
 
 				<span class="next-button disabled" id="seven-next" onclick="sevenHidden()">次へ</span>
 
@@ -526,13 +587,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="last" id="last">
 			<div class="second-head">
 				<div class="step-text">
-					<p>STEP<span class="span-check">1</span></p>
+					<p>STEP<span>1</span></p>
 					<p>STEP<span>2</span></p>
 					<p>STEP<span>3</span></p>
 					<p>STEP<span>4</span></p>
 					<p>STEP<span>5</span></p>
 					<p>STEP<span>6</span></p>
-					<p class="step-check">STEP<span>7</span></p>
+					<p>STEP<span>7</span></p>
+					<p class="step-check">STEP<span class="span-check">8</span></p>
 				</div>
 				<div class="step-car-last"><img src="./assets/img/step-car.png" alt=""></div>
 				<div class="step-road">
@@ -551,7 +613,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</span>
 					<span class="span-round7">
 					</span>
-
+					<span class="span-round8">
+					</span>
 				</div>
 			</div>
 			<div class="common-title">
