--- a/registration/index.html
+++ b/registration/index.html
@@ -573,7 +573,7 @@
                   >電話番号</label
                 >
                 <input
-                  name="phonenumber"
+                  name="phone"
                   id="phonenumber"
                   class="form-control"
                   placeholder="09012345678"
