--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -655,7 +655,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="last-name">
 				<div class="last-input">
-					<input type="text" inputmode="numeric" pattern="\d*" class="custom-phone-input" id="phone_number" placeholder="例：03-6825-2404">
+					<input type="text" name="phone" inputmode="numeric" pattern="\d*" class="custom-phone-input" id="phone_number" placeholder="例：03-6825-2404">
 				</div>
 
 			</div>
@@ -665,7 +665,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="last-name">
 				<div class="last-input">
-					<input type="text" class="custom-phone-input" id="email" placeholder="例：advisor@anytrai.jp">
+					<input type="text" name="email" class="custom-phone-input" id="email" placeholder="例：advisor@anytrai.jp">
 				</div>
 
 				<div class="phoneInputError" id="phoneInputError">
@@ -686,7 +686,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="next">
 				<span class="next-button" id="last-before" onclick="gotoSeven()">< 戻る</span>
 
-				<span class="next-button" id="last-next" onclick="completeStep()">登録する</span>
+				<span class="next-button" id="last-next" onclick="completeStep()">送信する</span>
 				<div class="next-seven-img" id="">
 					<img src="./assets/img/next.png" alt="">
 				</div>
