タイポの修正

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -284,7 +284,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="option-one" id="f5" data-index="5" onclick="fourClick(this)">副業ができる会社で働きたいから</div>
 				<div class="option-one" id="f6" data-index="6" onclick="fourClick(this)">⾃宅から近い会社で働きたいから</div>
 				<div class="option-one" id="f7" data-index="7" onclick="fourClick(this)">今の仕事を中⻑期的に続けるイメージができないから</div>
-				<div class="option-one" id="f8" data-index="8" onclick="fourClick(this)">間関係に疲れてしまったから</div>
+				<div class="option-one" id="f8" data-index="8" onclick="fourClick(this)">人間関係に疲れてしまったから</div>
 			</div>
 
 			<div class="next">
